# CVMR

CVMR_development/: CMakeLists.txt  EXAMPLEcamera_preprocessor.h  README.md  README_Bundle_Adjustment.md  extract_npz_to_text.py  geoinfo.txt  global_ba_0000_0580.npz  global_ba_0000_0580_cameras.txt  global_ba_0000_0580_intrinsics.txt  global_ba_0000_0580_points.txt  global_ba_0400_0580.npz  global_ba_0400_0580_cameras.txt  global_ba_0400_0580_intrinsics.txt  global_ba_0400_0580_points.txt  glwidget copy.cpp  glwidget copy.h  glwidget.cpp  glwidget.h  license.txt  main copy.cpp  main.cpp  money_cloud_gen.py  money_shot_pointcloud.txt  real_estate_camera_preprocessor.h  real_estate_camera_preprocessor_old.h  sample_pointcloud.txt  tester.txt
CVMR_development/3D_ecef/: _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0000.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0001.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0002.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0003.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0004.txt  _heading_offset=0_pitch_offset=0_heading_inv=flip_270_pitch_inv=flip_270_chirality=mirrored.txt_pose_0005.txt  (+833 more)
CVMR_development/3D_ecefBACKUP/: camera_000.txt  (+92 more)
(+233 files in other folders)
